Fix MenuButton alignment in DropdownNav

--- a/src/components/DropdownNav/style.scss
+++ b/src/components/DropdownNav/style.scss
@@ -14,8 +14,9 @@
     position: fixed;
 
     &.isHidden {
-      top: -5rem;
-      display: none;
+      top: -8rem;
+      //top: -4rem;
+      //display: none;
     }
 
     &.isVisible {
