--- a/src/components/MenuButton/style.scss
+++ b/src/components/MenuButton/style.scss
@@ -10,7 +10,9 @@
   }
 
   &.dropdown {
-    //border: 1px solid blue;
+    display: flex;
+    justify-content: center;
+    align-items: center;
   }
 
   &:hover {
